# mace-kit

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  README_zh.md
benchmark/: CMakeLists.txt
data/asr-tiny/: log  online.conf
data/asr-tiny/graph_tiny/: disambig_tid.int  phones.txt  words.txt
data/asr-tiny/graph_tiny/phones/: disambig.int  disambig.txt
data/asr-tiny/model/: asr_tiny.pb
data/asr-tiny/online/: tree
data/asr-tiny/online/conf/: ivector_extractor.conf  mfcc.conf  online.bak.conf
data/asr-tiny/online/ivector_extractor/: final.dubm  final.mat  global_cmvn.stats
data/test/: wav_text
docs/: Makefile  conf.py  faq.rst  index.rst  introduction.rst
docs/installation/: install.rst
docs/user_guide/: basic_api.rst  face_detection.rst  face_recognition.rst  object_detection.rst  person_segmentation.rst  speech_recognition.rst
include/: CMakeLists.txt
include/macekit/: common.h  context.h  export.h  face_detection.h  face_recognition.h  mat.h  object_detection.h  person_segmentation.h  speech_recognition.h  ssd_bbox.h  status.h  type.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  mat.cc
src/example/: CMakeLists.txt  draw_anchor.cc  example.cc
src/face_detection/: CMakeLists.txt  draw_anchor.cc  face_detection.cc  face_detection_impl.cc  face_detection_impl.h
src/face_detection/model/: CMakeLists.txt  ssd-mobilenet-v2.yml
src/face_detection/model/include/: face_detection.h  mace_engine_factory.h
src/face_detection/model/include/mace/public/: mace_engine_factory.h  ssd_mobilenet_v2.h
src/face_recognition/: CMakeLists.txt  face_recognition_impl.cc  face_recognition_impl.h  version_script.lds
src/face_recognition/model/: CMakeLists.txt  mobile-facenet.yml
src/face_recognition/model/include/: face_recognition.h  mace_engine_factory.h
src/face_recognition/model/include/mace/public/: mace_engine_factory.h  mobile_facenet.h
src/object_detection/: CMakeLists.txt  object_detection_impl.cc  object_detection_impl.h  version_script.lds
src/object_detection/model/: CMakeLists.txt
src/object_detection/model/include/: mace_engine_factory.h  object_detection.h
src/person_segmentation/: CMakeLists.txt  person_segmentation_impl.cc  person_segmentation_impl.h
src/person_segmentation/model/: CMakeLists.txt
src/person_segmentation/model/include/: mace_engine_factory.h  person_segmentation.h
src/speech_recognition/: CMakeLists.txt  mace-online-decode.cc
src/util/: CMakeLists.txt  ssd_bbox.cc  ssd_bbox.h
src_model/: face_detection.pb  face_detection.yml  face_recognition.yml  object_detection.prototxt
src_model/face_detection/: face_detection.pb  face_detection.yml
src_model/face_recognition/: face_recognition.yml
src_model/object_detection/: object_detection.yml
src_model/person_segmentation/: person_segmentation.yml
src_model/speech_recognition/: README.md  asr_tiny.conf  asr_tiny.trans  asr_tiny.yml
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt
test/cc/: CMakeLists.txt
test/ccunit/: CMakeLists.txt
test/ccunit/face_detection/: CMakeLists.txt  face_detection_test.cc
test/ccunit/face_recognition/: CMakeLists.txt  face_recognition_test.cc
test/ccunit/object_detection/: CMakeLists.txt  object_detection_test.cc
test/ccunit/person_segmentation/: CMakeLists.txt  person_segmentation_test.cc
test/ccunit/speech_recognition/: CMakeLists.txt  speech_recognition_test.cc
test/ccunit/util/: CMakeLists.txt  ssd_bbox_test.cc
test/cpp/: CMakeLists.txt  example_test.cc  ssd_bbox_test.cc
tool/: cctest-android.sh  cctest.sh  cmake-build-android-armeabi-v7a-full.sh  cmake-build-android-armeabi-v7a.sh  cmake-build-host.sh  cpplint.sh
tool/kaldi/: README.rst  kaldi-mace.diff
tool/kaldi/docker/: Dockerfile  compile-kaldi.sh
