add_executable(example example.cc ../../include/macekit/mat.h ../core/mat.cc)
if (GFLAGS_USE_TARGET_NAMESPACE)
  if (TARGET gflags::gflags)
    target_link_libraries(example gflags::gflags)
  else ()
    message(FATAL_ERROR "gflags::gflags target not defined")
  endif ()
else ()
  if (TARGET gflags)
    target_link_libraries(example gflags)
  else ()
    message(FATAL_ERROR "gflags target not defined")
  endif ()
endif ()
