set(MODEL_FACE_DETECTION_NAME "ssd-mobilenet-v2")
set(MODEL_FACE_DETECTION_SRCS_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(MODEL_FACE_DETECTION_INCLUDE_DIR "${MODEL_FACE_DETECTION_SRCS_DIR}/include/mace/public")
set(MODEL_FACE_DETECTION_LIB_DIR "${MODEL_FACE_DETECTION_SRCS_DIR}/lib")

if (ANDROID_ABI)
    set(MODEL_FACE_DETECTION_LIBRARIES "${MODEL_FACE_DETECTION_LIB_DIR}/${ANDROID_ABI}/${MODEL_FACE_DETECTION_NAME}.a" CACHE FILEPATH "MODEL_FACE_DETECTION_LIBRARIES" FORCE)
else (ANDROID_ABI)
    set(MODEL_FACE_DETECTION_LIBRARIES "${MODEL_FACE_DETECTION_LIB_DIR}/linux-x86-64/${MODEL_FACE_DETECTION_NAME}.a" CACHE FILEPATH "MODEL_FACE_DETECTION_LIBRARIES" FORCE)
endif (ANDROID_ABI)

add_library(face_detection_model STATIC IMPORTED GLOBAL)
set_property(TARGET face_detection_model PROPERTY IMPORTED_LOCATION ${MODEL_FACE_DETECTION_LIBRARIES})
add_dependencies(face_detection_model mace)
