set(MODEL_FACE_RECOGNITION_NAME "mobile-facenet")
set(MODEL_FACE_RECOGNITION_SRCS_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(MODEL_FACE_RECOGNITION_INCLUDE_DIR "${MODEL_FACE_RECOGNITION_SRCS_DIR}/include/mace/public")
set(MODEL_FACE_RECOGNITION_LIB_DIR "${MODEL_FACE_RECOGNITION_SRCS_DIR}/lib")

if (ANDROID_ABI)
    set(MODEL_FACE_RECOGNITION_LIBRARIES "${MODEL_FACE_RECOGNITION_LIB_DIR}/${ANDROID_ABI}/${MODEL_FACE_RECOGNITION_NAME}.a" CACHE FILEPATH "MODEL_FACE_RECOGNITION_LIBRARIES" FORCE)
else (ANDROID_ABI)
    set(MODEL_FACE_RECOGNITION_LIBRARIES "${MODEL_FACE_RECOGNITION_LIB_DIR}/linux-x86-64/${MODEL_FACE_RECOGNITION_NAME}.a" CACHE FILEPATH "MODEL_FACE_RECOGNITION_LIBRARIES" FORCE)
endif (ANDROID_ABI)

add_library(face_recognition_model STATIC IMPORTED GLOBAL)
set_property(TARGET face_recognition_model PROPERTY IMPORTED_LOCATION ${MODEL_FACE_RECOGNITION_LIBRARIES})
add_dependencies(face_recognition_model mace)
